# HaWoR

./: .gitignore  CLAUDE.md  README.md  calculate_statistics.py  calculate_statistics_pipeline.py  demo.py  hawor_pipeline_vitra.py  pyproject.toml  reconstruct.py  reconstruct_old.py  reconstruct_vitra.py  requirements.txt  requirements2.txt  test_droid_slam.py
.claude/: settings.local.json
docs/: run_hawor_on_cpu.md
hawor/utils/: process.py
lib/datasets/: track_dataset.py
lib/eval_utils/: custom_utils.py
lib/pipeline/: HaWoRPipeline.py  HaWoRPipelineChunk.py  HaWoRPipelineOpt.py  HaworPipelineKeypoints.py  HaworToKeypointsAdapter.py  masked_droid_slam.py  tools.py
lib/vis/: run_vis2.py  viewer.py
scripts/: README.md  count_video.py  draw_statistics.py  draw_statistics_pipeline.py  read_json.py  read_pkl.py  reconstruct.py  reconstruct_chunk.py  reconstruct_egocentric.py  reconstruct_egocentric_chunk.py  reconstruct_egocentric_cpu.py  reconstruct_egocentric_opt.py  reconstruct_opt.py  reconstruct_vitra.py  test_chunked_pipeline.py  test_pipeline_opt.py  test_pipeline_performance.py  test_reconstruct_pipeline.py
scripts/VR/: COMPARE_README.md  README.md  compare_keypoints_3d.py  compare_vr_data_and_hawor.py  convert_vr_data_to_lerobot.py  draw_keypoints.py  draw_keypoints_with_origin_video.py  example_usage.py  generate_test_data.py  load_vr_and_hawor.py  temp.py  visualize_vr_keypoints.py
scripts/archive/: reconstruct.py  reconstruct_egocentric.py  reconstruct_egocentric_chunk.py  reconstruct_old.py  reconstruct_top_side_by_side.py
scripts/scripts_test_video/: hawor_slam.py  hawor_video.py
tests/: debug_cuda.py  fix_h200.sh  test_env.py  test_pipeline.py  test_single_video.py
